Regression: entering vertexpaint mode will create a color attribute that is not default (camera icon) #105168

Closed
opened 2023-02-24 10:51:34 +01:00 by Philipp Oeser · 0 comments
Member

System Information
Operating system: Linux-6.1.6-200.fc37.x86_64-x86_64-with-glibc2.36 64 Bits
Graphics card: AMD Radeon Graphics (renoir, LLVM 15.0.6, DRM 3.49, 6.1.6-200.fc37.x86_64) AMD 4.6 (Core Profile) Mesa 22.3.3

Blender Version
Broken: version: 3.5.0 Beta, branch: blender-v3.5-release, commit date: 2023-02-24 08:04, hash: 718f78cfcae5

Caused by 6514bb05ea

Short description of error
Entering vertexpaint mode will create a color attribute that is active, but not default (camera icon)

Exact steps for others to reproduce the error
From the default startup:

  • enter vertexpaint mode

image

**System Information** Operating system: Linux-6.1.6-200.fc37.x86_64-x86_64-with-glibc2.36 64 Bits Graphics card: AMD Radeon Graphics (renoir, LLVM 15.0.6, DRM 3.49, 6.1.6-200.fc37.x86_64) AMD 4.6 (Core Profile) Mesa 22.3.3 **Blender Version** Broken: version: 3.5.0 Beta, branch: blender-v3.5-release, commit date: 2023-02-24 08:04, hash: `718f78cfcae5` Caused by 6514bb05ea **Short description of error** Entering vertexpaint mode will create a color attribute that is active, but not default (camera icon) **Exact steps for others to reproduce the error** From the default startup: - enter vertexpaint mode ![image](/attachments/4eb98620-735a-487f-9ca3-8c44a4f7cd24)
8.6 KiB
Philipp Oeser added the
Priority
Normal
Type
Report
Status
Confirmed
labels 2023-02-24 10:51:56 +01:00
Philipp Oeser self-assigned this 2023-02-24 10:52:05 +01:00
Philipp Oeser added the
Module
Sculpt, Paint & Texture
label 2023-02-24 10:52:13 +01:00
Philipp Oeser changed title from Entering vertexpaint mode will create a color attribute that is not default (camera icon) to Regression: entering vertexpaint mode will create a color attribute that is not default (camera icon) 2023-02-24 11:01:45 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-02-24 13:19:24 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
1 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#105168
No description provided.