Fix #105168: Entering vertexpaint creates a non-default color attribute

Caused by 6514bb05ea

The new attribute was set active, but not default (camera icon).
Now set it default as well.

Pull Request #105169